--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Webpack fucker!!!</title>
-    <ul>
-        <li>Dasha</li>
-        <li>Sasha</li>
-        <li>Stasha</li>
-    </ul>
-</head>
+<link href="main.css" rel="stylesheet"></head>
 <body>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
