add individual chat2 and new textarea

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
 					<p>08:11</p>
 				</div>	
              </li>
+
 	         <li>
 			     <div class = "avatar top">
 			        <img src = "img/06.jpg" alt = "">
@@ -68,6 +69,7 @@
 					<p>08:22</p>
 				</div>	
              </li>
+			 
 			 <li>
 			     <div class = "avatar top">
 			        <img src = "img/04.jpg" alt = "">
@@ -103,28 +105,72 @@
 				</div>	
              </li>
          </ul>
+		 
 	   </aside>
+	   <section id = "chat-screen">
+			<section id="messages">
+				<article>                                      <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/03.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Я так рада!</p>
+				</article>                                    
+				<article class = "right">                      <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/05.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Я тоже</p>
+				</article>
+				<article>                                      <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/03.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Хочу в ресторан!</p>
+				</article>                    
+				<article class = "right">                      <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/05.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Уже забронировал на вечер</p>
+				</article>
+				 <article>                                      <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/03.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Когда ты успел?</p>
+				</article>  
+				<article class = "right">                       <!--  индивидуальный чат -->
+					<div class = "avatar">
+						<img src = "img/05.jpg" alt = "">
+					</div>	
+					<div class = "msg">
+						<div class = "pointer"></div>
+						<div class = "inner-msg">
+							<p>Еще вчера перед сном ты бормотала что хочешь в ресторан)</p>
+				</article>
+			</section>
+			<div class = "msg-compose"
+				<i class = "fas fa-paperclip"></i>
+				<textarea placeholder = "Скажи что-нибудь"></textarea>
+				<i class = "fab fa-telegram-plane"></i>
+		</section>
      </div>
    </div>	
-
-<div class="chat">
-  <div class="chat-title">
-    <h1>Chat</h1>
-
-    <figure class="avatar">
-      <img src="" /></figure>
-  </div>
-  <div class="messages">
-    <div class="messages-content"></div>
-  </div>
-  <div class="message-box">
-    <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
-    <button type="submit" class="message-submit">Отправить</button>
-  </div>
-
-</div>
-
-<div class="background"></div>
 
 </body>
 </html>
