rename classes "offline" to "online offline" for best sinchronize with css file

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 		     <li>
 			     <div class = "avatar top">
 			        <img src = "img/05.jpg" alt = "">
-					<div class = "offline"></div>
+					<div class = "online offline"></div>
 			     </div>
                  <div class = "users-list">
 			         <div class = "username">
@@ -73,7 +73,7 @@
 			 <li>
 			     <div class = "avatar top">
 			        <img src = "img/04.jpg" alt = "">
-					<div class = "offline"></div>
+					<div class = "online offline"></div>
 			     </div>
                  <div class = "users-list">
 			         <div class = "username">
@@ -90,7 +90,7 @@
 			 			 <li>
 			     <div class = "avatar top">
 			        <img src = "img/14.jpg" alt = "">
-					<div class = "online"></div>
+					<div class = "online offline "></div>
 			     </div>
                  <div class = "users-list">
 			         <div class = "username">
@@ -107,6 +107,7 @@
          </ul>
 		 
 	   </aside>
+	   
 	   <section id = "chat-screen">
 			<section id="messages">
 				<article>                                      <!--  индивидуальный чат -->
@@ -172,5 +173,8 @@
      </div>
    </div>	
 
+
+
 </body>
 </html>
+   
