rename .img on .png (html)

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 		 <ul>
 		     <li>
 			     <div class = "avatar top">
-			        <img src = "img/05.jpg" alt = "">
+			        <img src = "img/05.png" alt = "">
 					<div class = "online offline"></div>
 			     </div>
                  <div class = "users-list">
@@ -36,7 +36,7 @@
              </li>	
 		     <li>
 			     <div class = "avatar top">
-			        <img src = "img/03.jpg" alt = "">
+			        <img src = "img/03.png" alt = "">
 					<div class = "online"></div>
 			     </div>
                  <div class = "users-list">
@@ -54,7 +54,7 @@
 
 	         <li>
 			     <div class = "avatar top">
-			        <img src = "img/06.jpg" alt = "">
+			        <img src = "img/06.png" alt = "">
 					<div class = "online"></div>
 			     </div>
                  <div class = "users-list">
@@ -72,7 +72,7 @@
 			 
 			 <li>
 			     <div class = "avatar top">
-			        <img src = "img/04.jpg" alt = "">
+			        <img src = "img/04.png" alt = "">
 					<div class = "online offline"></div>
 			     </div>
                  <div class = "users-list">
@@ -89,7 +89,7 @@
              </li>
 			 			 <li>
 			     <div class = "avatar top">
-			        <img src = "img/14.jpg" alt = "">
+			        <img src = "img/14.png" alt = "">
 					<div class = "online offline "></div>
 			     </div>
                  <div class = "users-list">
@@ -112,7 +112,7 @@
 			<section id="messages">
 				<article>                                      <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/03.jpg" alt = "">
+						<img src = "img/03.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
@@ -121,7 +121,7 @@
 				</article>                                    
 				<article class = "right">                      <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/05.jpg" alt = "">
+						<img src = "img/05.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
@@ -130,7 +130,7 @@
 				</article>
 				<article>                                      <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/03.jpg" alt = "">
+						<img src = "img/03.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
@@ -139,7 +139,7 @@
 				</article>                    
 				<article class = "right">                      <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/05.jpg" alt = "">
+						<img src = "img/05.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
@@ -148,7 +148,7 @@
 				</article>
 				 <article>                                      <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/03.jpg" alt = "">
+						<img src = "img/03.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
@@ -157,7 +157,7 @@
 				</article>  
 				<article class = "right">                       <!--  индивидуальный чат -->
 					<div class = "avatar">
-						<img src = "img/05.jpg" alt = "">
+						<img src = "img/05.png" alt = "">
 					</div>	
 					<div class = "msg">
 						<div class = "pointer"></div>
