add style to index.html (html)

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,17 @@
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"> <!--  подкл шрифты  -->
    <link rel="stylesheet" href="styles.css">
 </head>
+
+<style>                      <!-- /* Убираем маркеры (чтоб не забыть) */ -->
+   li {
+    list-style-type: none; 
+   }
+   ul {
+    margin-left: 0;             /* Отступ слева в браузере IE и Opera */
+    padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
+   }
+</style>
+
 <body>
 
     <div id="wrapper">
