--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,17 @@
 					</div>
 				</li>
 			</ul>
-
+				<div class = "messageinfo">
+					<p title = "элемент для отображения общего кол-ва введенных символов">Количество введенных символов: 
+						<output name="result" class = "displaysympols" title = "элемент для отображения общего кол-ва введенных символов">0</output></p>
+					<p title = "элемент для отображения кол-ва введенных букв">Количество введенных букв: 
+						<output name="result" class = "displayletters" title = "элемент для отображения кол-ва введенных букв">0</output></p>
+					<p title = "элемент для отображения кол-ва невидимых символов ">Количество невидимых символов: 
+						<output name="result" class = "displayspaces" title = "элемент для отображения кол-ва невидимых символов ">0</output></p>
+					<p title = "элемент для отображения кол-ва введенных знаков препинания">Количество знаков препинания: &nbsp;
+						<output name="result" class = "displaypunctuation" title = "элемент для отображения кол-ва введенных знаков препинания">0</output></p>
+	            </div>
+		</div>
 	   
 	   <section id = "chat-screen">
 			<section id="messages">
