add block right-header (html)

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,15 @@
 						<output name="result" class = "displaypunctuation" title = "элемент для отображения кол-ва введенных знаков препинания">0</output></p>
 	            </div>
 		</div>
+		
+		<div class = "right-header" title = "Вкладки переключения между чатами">
+			    <input type="radio" id="one" name="contorol" checked />
+    			<label class = "threebuttons" for="one"><i class="fa fa-user" aria-hidden="true" title = "Вкладки переключения между чатами"></i></label>
+    			<input type="radio" id="two" name="contorol" />
+    			<label class = "threebuttons" for="two"><i class="fa fa-users" aria-hidden="true" title = "Вкладки переключения между чатами"></i></label>
+    			<input type="radio" id="three" name="contorol" />
+    			<label class = "threebuttons" for="three"><i class="fa fa-share-alt" aria-hidden="true" title = "Вкладка выбора чатов"></i></label>
+		</div>
 	   
 	   <section id = "chat-screen">
 			<section id="messages">
