change chat blocks & add chat-header(html)

--- a/src/index.html
+++ b/src/index.html
@@ -157,69 +157,20 @@
     			<input type="radio" id="three" name="contorol" />
     			<label class = "threebuttons" for="three"><i class="fa fa-share-alt" aria-hidden="true" title = "Вкладка выбора чатов"></i></label>
 		</div>
-	   
-	   <section id = "chat-screen">
-			<section id="messages">
-				<article>                                      <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/03.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Я так рада!</p>
-				</article>                                    
-				<article class = "right">                      <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/05.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Я тоже</p>
-				</article>
-				<article>                                      <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/03.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Хочу в ресторан!</p>
-				</article>                    
-				<article class = "right">                      <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/05.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Уже забронировал на вечер</p>
-				</article>
-				 <article>                                      <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/03.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Когда ты успел?</p>
-				</article>  
-				<article class = "right">                       <!--  индивидуальный чат -->
-					<div class = "avatar">
-						<img src = "img/05.png" alt = "">
-					</div>	
-					<div class = "msg">
-						<div class = "pointer"></div>
-						<div class = "inner-msg">
-							<p>Еще вчера перед сном ты бормотала что хочешь в ресторан)</p>
-				</article>
-			</section>
-			<div class = "msg-compose"
-				<i class = "fas fa-paperclip"></i>
-				<textarea placeholder = "Скажи что-нибудь"></textarea>
-				<i class = "fab fa-telegram-plane"></i>
-		</section>
+<!-- САМ ЧАТ -->		
+		
+		<div class="chat">    
+
+<!-- ХЕДЕР ВВОДА СООБЩЕНИЙ-->	
+			
+			<div class="chat-header clearfix" >
+				<img src="image/04.png" alt="avatar">
+					<div class="chat-about">
+						<div class="chat-with">Анастасия</div>
+						<div class="chat-num-messages">10 сообщений</div>
+					</div>
+				<i class="fa fa-star"></i>
+			</div>
      </div>
    </div>	
 
