add link font-awesome (html)

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru"     <!--   -->
-
+<html lang="ru">                                                          <!--   -->
 <head>
    <meta charset="UTF-8">                                                 <!--   -->
    <meta name="каркас">                                                   <!--   -->
    <title>Чат многофункциональный</title>
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"> <!--  подкл шрифты  -->
+   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  <!-- библиотека иконок font-awesome (файлом подключал, но не отображает)-->
 </head>
 
 <style>                      <!-- /* Убираем маркеры (чтоб не забыть) */ -->
@@ -18,10 +18,10 @@
     padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
    }
 </style>
-
+ 
 <body>
-
- 	<div class="container clearfix">
+	
+	<div class="container clearfix">
 		<div class="people-list" id="people-list">
 <!-- Левый хедер  -->			
 			<div class = "left-header">
@@ -171,7 +171,7 @@
 					</div>
 				<i class="fa fa-star"></i>
 			</div>
-   
+				
 <!-- ИСТОРИЯ СООБЩЕНИЙ-->				
 				
 			<div class="chat-history" title = "отображение сообщений пользователей ">
@@ -258,6 +258,7 @@
 					<button title = "кнопка отправки сообщений">ОТПРАВИТЬ</button>
 		</div>
 	</div>
+	
 </body>
+
 </html>
-   
