--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
-<html lang="ru">                                                          <!--   -->
+<html lang="En-Eu">
 <head>
-	<meta charset="UTF-8">                                                 <!--   -->
-	<meta name="каркас">                                                   <!--   -->
-	<title>Чат многофункциональный</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="styles.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  <!-- библиотека иконок font-awesome (файлом подключал, но не отображает)-->
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <title>Webpack starter</title>
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
-
-<style>                      <!-- /* Убираем маркеры (чтоб не забыть) */ -->
-	li {
-		list-style-type: none; 
-	}
-	ul {
-		margin-left: 0;             /* Отступ слева в браузере IE и Opera */
-		padding-left: 0;            /* Отступ слева в браузере Firefox, Safari, Chrome */
-	}
-</style>
- 
 <body>
-	
 	<div class="container clearfix">
 		<div class="people-list" id="people-list">
 <!-- Левый хедер  -->			
 			<div class = "left-header">
 				<a href = "" >
-					<img src="image/logoDNA.png" alt="logo" title="Логотип чата">
+					<img src="images/logoDNA.png" alt="logo" title="Логотип чата">
 				</a>
 				
 				<div class="timeonline">
@@ -54,7 +42,7 @@
 		   </div>
 			<ul class="list" title="отображение списка участников">
 				<li class="clearfix">
-					<img src="image/01.png" alt="avatar">
+					<img src="images/01.png" alt="avatar">
 					<div class="about">
 					<div class="name">Россомаха</div>
 					<div class="status">
@@ -63,7 +51,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="image/02.png" alt="avatar">
+					<img src="images/02.png" alt="avatar">
 					<div class="about">
 					<div class="name">АLEX Александр</div>
 					<div class="status">
@@ -72,7 +60,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="image/03.png" alt="avatar">
+					<img src="images/03.png" alt="avatar">
 					<div class="about">
 					<div class="name">НЕО</div>
 					<div class="status">
@@ -81,7 +69,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="image/04.png" alt="avatar">
+					<img src="images/04.png" alt="avatar">
 					<div class="about">
 					<div class="name">Анстасия</div>
 					<div class="status">
@@ -89,7 +77,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/05.png" alt="avatar">
+					<img src="images/05.png" alt="avatar">
 					<div class="about">
 					<div class="name">Рыбка)</div>
 					<div class="status">
@@ -97,7 +85,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/06.png" alt="avatar">
+					<img src="images/06.png" alt="avatar">
 					<div class="about">
 					<div class="name">Wonder Woman</div>
 					<div class="status">
@@ -105,7 +93,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/07.png" alt="avatar">
+					<img src="images/07.png" alt="avatar">
 					<div class="about">
 					<div class="name">Arny</div>
 					<div class="status">
@@ -113,7 +101,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/08.png" alt="avatar">
+					<img src="images/08.png" alt="avatar">
 					<div class="about">
 					<div class="name" style = " color:orange">Бизнес Леди (отошла)</div>
 					<div class="status">
@@ -121,7 +109,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/09.png" alt="avatar">
+					<img src="images/09.png" alt="avatar">
 					<div class="about">
 					<div class="name">Крутой</div>
 					<div class="status">
@@ -129,7 +117,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="image/10.png" alt="avatar">
+					<img src="images/10.png" alt="avatar">
 					<div class="about">
 					<div class="name">Анжелика</div>
 					<div class="status">
@@ -175,7 +163,7 @@
 <!-- ХЕДЕР ВВОДА СООБЩЕНИЙ-->	
 			
 			<div class="chat-header clearfix" >
-				<img src="image/04.png" alt="avatar">
+				<img src="images/04.png" alt="avatar">
 					<div class="chat-about">
 						<div class="chat-with">Анастасия</div>
 						<div class="chat-num-messages">10 сообщений</div>
@@ -264,11 +252,9 @@
 			<br>
 			<textarea name="message-to-send" id="message-to-send" placeholder="Ваше сообщение" rows="3" title = "поле для ввода текста"></textarea>
 				<i class="fa fa-paperclip" aria-hidden="true"></i> &nbsp;&nbsp;&nbsp;&nbsp;
-				<i class="fa fa-file-image-o"></i>
+				<i class="fa fa-file-images-o"></i>
 				<button title = "кнопка отправки сообщений">ОТПРАВИТЬ</button>
 		</div>
 	</div>
-	
 </body>
-
 </html>
