add webpack changes
add font awesome link
add styles.css linl
correct <i class="fa fa-file-image-o"></i>

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Webpack starter</title>
     <script src="http://localhost:35729/livereload.js"></script>
+	<link rel='stylesheet' href='sass/styles.scss'>
+	<link rel='stylesheet' href='sass/styles.css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
+	<link rel="stylesheet" href="https://jingoistic-instruct.000webhostapp.com/styles.css"> 
 </head>
 <body>
 	<div class="container clearfix">
@@ -252,7 +256,7 @@
 			<br>
 			<textarea name="message-to-send" id="message-to-send" placeholder="Ваше сообщение" rows="3" title = "поле для ввода текста"></textarea>
 				<i class="fa fa-paperclip" aria-hidden="true"></i> &nbsp;&nbsp;&nbsp;&nbsp;
-				<i class="fa fa-file-images-o"></i>
+				<i class="fa fa-file-image-o"></i>
 				<button title = "кнопка отправки сообщений">ОТПРАВИТЬ</button>
 		</div>
 	</div>
