--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Webpack starter</title>
     <script src="http://localhost:35729/livereload.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  -->
 	<link rel="stylesheet" href="./sass/styles.scss"> 
 </head>
 <body>
@@ -16,7 +16,7 @@
 <!-- Левый хедер  -->			
 			<div class = "left-header">
 				<a href = "" >
-					<img src="https://jingoistic-instruct.000webhostapp.com/logoDNA.png" alt="logo" title="Логотип чата">
+					<img src="images/logoDNA.png" alt="logo" title="Логотип чата">
 				</a>
 				
 				<div class="timeonline">
@@ -44,7 +44,7 @@
 		   </div>
 			<ul class="list" title="отображение списка участников">
 				<li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/01.png" alt="avatar">
+					<img src="images/01.png" alt="avatar">
 					<div class="about">
 					<div class="name">Россомаха</div>
 					<div class="status">
@@ -53,7 +53,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/02.png" alt="avatar">
+					<img src="images/02.png" alt="avatar">
 					<div class="about">
 					<div class="name">АLEX Александр</div>
 					<div class="status">
@@ -62,7 +62,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/03.png" alt="avatar">
+					<img src="images/03.png" alt="avatar">
 					<div class="about">
 					<div class="name">НЕО</div>
 					<div class="status">
@@ -71,7 +71,7 @@
 					</div>
 				</li>
 				<li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/04.png" alt="avatar">
+					<img src="images/04.png" alt="avatar">
 					<div class="about">
 					<div class="name">Анстасия</div>
 					<div class="status">
@@ -79,7 +79,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/05.png" alt="avatar">
+					<img src="images/05.png" alt="avatar">
 					<div class="about">
 					<div class="name">Рыбка)</div>
 					<div class="status">
@@ -87,7 +87,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/06.png" alt="avatar">
+					<img src="images/06.png" alt="avatar">
 					<div class="about">
 					<div class="name">Wonder Woman</div>
 					<div class="status">
@@ -95,7 +95,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/07.png" alt="avatar">
+					<img src="images/07.png" alt="avatar">
 					<div class="about">
 					<div class="name">Arny</div>
 					<div class="status">
@@ -103,7 +103,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/08.png" alt="avatar">
+					<img src="images/08.png" alt="avatar">
 					<div class="about">
 					<div class="name" style = " color:orange">Бизнес Леди (отошла)</div>
 					<div class="status">
@@ -111,7 +111,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/09.png" alt="avatar">
+					<img src="images/09.png" alt="avatar">
 					<div class="about">
 					<div class="name">Крутой</div>
 					<div class="status">
@@ -119,7 +119,7 @@
 					</div>
 					</div>
 				</li><li class="clearfix">
-					<img src="https://jingoistic-instruct.000webhostapp.com/10.png" alt="avatar">
+					<img src="images/10.png" alt="avatar">
 					<div class="about">
 					<div class="name">Анжелика</div>
 					<div class="status">
@@ -165,7 +165,7 @@
 <!-- ХЕДЕР ВВОДА СООБЩЕНИЙ-->	
 			
 			<div class="chat-header clearfix" >
-				<img src="https://jingoistic-instruct.000webhostapp.com/04.png" alt="avatar">
+				<img src="images/04.png" alt="avatar">
 					<div class="chat-about">
 						<div class="chat-with">Анастасия</div>
 						<div class="chat-num-messages">10 сообщений</div>
