--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Webpack starter</title>
     <script src="http://localhost:35729/livereload.js"></script>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">  -->
+	<link rel="stylesheet" href="./sass/font-awesome.min.scss">
 	<link rel="stylesheet" href="./sass/styles.scss"> 
 </head>
 <body>
