add scrolling, update messages in chat room

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
 <!-- ИСТОРИЯ СООБЩЕНИЙ-->				
 				
 			<div class="chat-history" title = "отображение сообщений пользователей ">
-				<ul>
+				<ul id="chat-container">
 					<li>
 						<div class="message-data">
 							<span class="message-data-name"><i class="fa fa-circle online"></i>Анастасия</span>
@@ -102,63 +102,15 @@
 						<div class="message my-message">Я так рада!
 						</div>
 					</li>
-					<li class="clearfix">
+<!-- 					<li class="clearfix">
 						<div class="message-data align-right">
 							<span class="message-data-time">09:11 Сегодня</span> &nbsp; &nbsp;
 							<span class="message-data-name">Вы</span> <i class="fa fa-circle me"></i>
 						</div>
 						<div class="message other-message float-right">Я тоже)
 						</div>
-					</li>
-					<li>
-						<div class="message-data">
-							<span class="message-data-name"><i class="fa fa-circle online"></i>Анастасия</span>
-							<span class="message-data-time">10:20 AM, Сегодня</span>
-						</div>
-						<div class="message my-message">Хочу в ресторан.
-						</div>
-					</li>
-					<li class="clearfix">
-						<div class="message-data align-right">
-							<span class="message-data-time">10:22 Сегодня</span> &nbsp; &nbsp;
-							<span class="message-data-name">Вы</span> <i class="fa fa-circle me"></i>
-						</div>
-						<div class="message other-message float-right">Уже забронировал на вечер
-						</div>
-					</li>
-					<li>
-						<div class="message-data">
-							<span class="message-data-name"><i class="fa fa-circle online"></i>Анастасия</span>
-							<span class="message-data-time">10:40 Сегодня</span>
-						</div>
-						<div class="message my-message">Когда ты успел?
-						</div>
-					</li>
-					<li class="clearfix">
-						<div class="message-data align-right">
-							<span class="message-data-time">10:44 Сегодня</span> &nbsp; &nbsp;
-							<span class="message-data-name">Вы</span> <i class="fa fa-circle me"></i>
-						</div>
-						<div class="message other-message float-right">Еще вчера перед сном ты бормотала что хочешь в ресторан)
-						</div>
-					</li>
-					<li>
-						<div class="message-data">
-							<span class="message-data-name"><i class="fa fa-circle online"></i>Анастасия</span>
-							<span class="message-data-time">11:11 Сегодня</span>
-						</div>
-						<div class="message my-message">Я поражена твоей успеваемостью)
-						</div>
-					</li>
-					<li>
-				    <li class="clearfix">
-						<div class="message-data align-right">
-							<span class="message-data-time">12:12 Сегодня</span> &nbsp; &nbsp;
-							<span class="message-data-name">Вы</span> <i class="fa fa-circle me"></i>
-						</div>
-						<div class="message other-message float-right">))
-						</div>
-					</li>
+					</li> -->
+
 				</ul>
 			</div>
 <!-- ТЕКСТОВОЕ ПОЛЕ ВВОДА СООБЩЕНИЙ -->			
