add time, usernames in header

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 		   </div>
 <!-- Список пользователей -->	
 		   <div class = "onlinemembers" title="отображение общего количества пользователей онлайн">
-					<i class="fa fa-circle online"></i>online 6 участников
+					<i class="fa fa-circle online"></i>online <span>0</span> участников
 		   </div>
 			<ul class="list" id="users-list" title="отображение списка участников">
 			</ul>
@@ -85,7 +85,10 @@
 				<img src="images/04.png" alt="avatar">
 					<div class="chat-about">
 						<div class="chat-with">Анастасия</div>
-						<div class="chat-num-messages">10 сообщений</div>
+						<div class="chat-num-messages">
+                            <span>10</span>
+                            сообщений
+                        </div>
 					</div>
 				<i class="fa fa-star"></i>
 			</div>
