--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 				</a>
 				
 				<div class="timeonline">
-					<span class = "youstatus" title = "время пребывания онлайн"><i class="fa fa-circle online"></i>online 4 часа</span>
+					<span class = "youstatus" title = "время пребывания онлайн"><i class="fa fa-circle online"></i>online <span>1</span> секунд</span>
 					<p>
 						<span class = "timenow" title = "текущее время">12:21</span>
 					</p>
@@ -30,7 +30,7 @@
 						<a href="">
 							<i class="fa fa-comment-o" aria-hidden="true" title="отображение личных сообщений"></i>
 						</a>
-						<span class="countMe" title="количество новых непрочитанных сообщений" >12</span>
+						<span class="countMe" title="количество сообщений пользователей" ></span>
 					</div>
 				
 				 <div class = "settings">
