add correct index.html

--- a/src/index.html
+++ b/src/index.html
@@ -82,11 +82,11 @@
 <!-- ХЕДЕР ВВОДА СООБЩЕНИЙ-->	
 			
 			<div class="chat-header clearfix" >
-				<img src="images/04.png" alt="avatar">
+				<img src="images/01.png" alt="avatar">
 					<div class="chat-about">
 						<div class="chat-with">Анастасия</div>
 						<div class="chat-num-messages">
-                            <span>10</span>
+                            <span>1</span>
                             сообщений
                         </div>
 					</div>
@@ -99,13 +99,13 @@
 				<ul id="chat-container">
 					<li>
 						<div class="message-data">
-							<span class="message-data-name"><i class="fa fa-circle online"></i>Анастасия</span>
-							<span class="message-data-time">09:09 Сегодня</span>
+							<span class="message-data-name"><i class="fa fa-circle online"></i></span>
+							<span class="message-data-time"></span>
 						</div>
-						<div class="message my-message">Я так рада!
+						<div class="message my-message">
 						</div>
 					</li>
-<!-- 					<li class="clearfix">
+<!-- 				<li class="clearfix">
 						<div class="message-data align-right">
 							<span class="message-data-time">09:11 Сегодня</span> &nbsp; &nbsp;
 							<span class="message-data-name">Вы</span> <i class="fa fa-circle me"></i>
